# aeroptima

./: .gitignore  LICENSE  README.md  airfoil_nn.pth  best_airfoil_nn.pth  database.py  drag_model.pth  lift_model.pth  pyproject.toml  text.txt
shell_scripts/: setup_environment.py  setup_environment_windows.py
src/aerofoil/: aerofoil.py
src/bezier/: __init__.py  bernstein.py  bezier.py  castigliano.py  characteristic.py  cubic.py  cubic_spline.py  de_casteljau.py  spline.py
src/classes/: __init__.py  aerofoil.py  aerofoil_component.py  bezierfoil.py
src/database/: PCA_aerofoils.py  PCA_bezier_controls.npy  PCA_perturbed_airfoil_data.csv  UIUC_aerofoils.py  __init__.py  aerofoil_data.py  basis_matrices.py  cached_matrices.py  pca_components.npy  pca_mean_airfoil.npy
src/parser/: __init__.py  aerofoil.py  parsefoil.py
src/tests/: Gradient_Boosting_test.py  Kriging_test.py  Load_test.py  NACA_data_test.py  PCA_decomposition_test.py  PCA_files_test.py  aerofoil_class_test.py  arc_length_param_test.py  bezier_curve_test.py  bezier_spline_test.py  bezierfoil_class_test.py  control_point_vector_test.py  multi_discipline_optimization_test.py  paraboloid_explicit_component_test.py  parser_test.py  regenerate_test.py  sample_generation_test.py  single_discipline_optimization_test.py  split_parser_test.py  surrogate_test.py  vortex_particle_method_test.py  xfoil_test_linux.py  xfoil_test_windows.py
src/utilities/: PCA_database_generator.py  PCA_perturbed_dataset_generator.py  TERMINAL_database_generator.py  TERMINAL_setup_environment_windows.py  __init__.py  (+2 more)
(+24 files in other folders)
